# severstal-competition

./: .gitignore  pyproject.toml  training_log.csv
notebooks/: 01_eda_train_eval.ipynb
src/: augment.py  config.py  data.py  losses.py  model.py  viz.py
